Make a basis User model including secure passwords

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -10,7 +10,7 @@
 	<div id="header">
 	  
 	  <h2>We&rsquo;re riding Ruby on Rails!</h2><p></p>
-	  <h3>Current Version = 0.3</h3>
+	  Current Version = <b>0.4</b>
 	</div>
 	<p></p>
 	<div id="about">
@@ -27,33 +27,50 @@
 	      <li>iTrack. A bug and issue tracking app.</li>
 	    </ol>
 	  </p>
-	  <div id="about">
+
+	<div id="about">
 	  <h3>
 	    Log
 	  </h3>
-	  <div></div>
+	  
 	  <h2>
 	    Progress so far .....
 	  </h2>
-	  <ol>
-	    <li>26/11/13: Changed both Dev and Prod to use PostgreSQL then
-	      wasted a load of time on Guard and Spork which turns out not
-	      to work on Windows ... ho hum</li>
-	    <li>28/11/13: Added  Bootstrap and some custom CSS</li>  
-	    <li>04/12/13:
-	        <ul>
-	          <li>Use the Sprocket gem & manifest files to combine the assets and make the css sassy with Sass</li>
-	          <li>Replace some colours with variables</li>
-	          <li>....</li>
-	       </ul>
-	     </li>
-	     <li>10/12/13:
+
+	  <ul>
+	  	<li>
+	  		12/12/13: Started on the User model
+	  	</li>
+	    <li>
+	    	10/12/13:
 	     	<ul>
-		     	<li>Added the named routes. </li>
-				<li>Refactored the test specs</li>
-				<li>Added a page for users to sign up</li>
+		     	<li>
+		     		Added the named routes
+		     	</li>
+				<li>
+					Refactored the test specs
+				</li>
+				<li>
+					Added a page for users to sign up
+				</li>
 	     	</ul>  
-	  	</li>  
-	  </ol>
-	
+	  	</li>
+	    <li>
+	    	04/12/13:
+	        <ul>
+	          <li>
+	          	Use the Sprocket gem and manifest files to combine the assets and make the css sassy with Sass
+	          </li>
+	          <li>
+	          	Replace some colours with variables
+	          </li>
+	       </ul>
+	     </li>	  	 	  	
+	    <li>
+	        26/11/13: Changed both Dev and Prod to use PostgreSQL then wasted a load of time on Guard and Spork which turns out not to work on Windows ... ho hum
+	  	</li>
+	    <li>
+	    	28/11/13: Added  Bootstrap and some custom CSS
+	    </li>  
+	  </ul>
 	</div>
