Add test for email downcasting

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -39,6 +39,9 @@
 
 	  <ul>
 	  	<li>
+	  		18/12/13: Finish User model and add secure passwords
+	  	</li>
+	  	<li>
 	  		12/12/13: Started on the User model
 	  	</li>
 	    <li>
