--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -39,6 +39,14 @@
 
 	  <ul>
 	  	<li>
+	  		30/12/13: On holdiay now so time to plough on.
+	  		<ul>
+		  		<li>
+		  			Added user sign up form
+		  		</li>
+	  		</ul>
+	  	</li>
+	  	<li>
 	  		18/12/13: Finish User model and add secure passwords
 	  	</li>
 	  	<li>
