Complete user sign up

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -38,12 +38,16 @@
 	  </h2>
 
 	  <ul>
+		<li>
+  			03/01/14: Complete user sign up	
+  		</li>
 	  	<li>
-	  		30/12/13: On holdiay now so time to plough on.
+	  		30/12/13: On holiday now, time to plough on....
 	  		<ul>
 		  		<li>
 		  			Added user sign up form
 		  		</li>
+	
 	  		</ul>
 	  	</li>
 	  	<li>
