--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
     <div class="container">
       <% flash.each do |key, value| %>
+        <!-- Replace alert class code here -->
         <div class="alert alert-<%= key %>"><%= value %></div>
       <% end %>
       <%= yield %>
