--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -10,7 +10,7 @@
 	<div id="header">
 	  
 	  <h2>We&rsquo;re riding Ruby on Rails!</h2><p></p>
-	  Current Version = <b>0.5</b>
+	  Current Version = <b>0.6</b>
 	</div>
 	<p></p>
 	<div id="about">
@@ -38,6 +38,9 @@
 	  </h2>
 
 	  <ul>
+	  	<li>
+	  		08/01/2014: Add a security model for user updates and some add friendly forwarding
+	  	</li>
 	  	<li>
 	  		05/01/14: Finished sign out and added some Cucumer tests.  Had to precomile the asset stream
 	  	</li>
