add delete for admin users

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -39,7 +39,7 @@
 
 	  <ul>
 	  	<li>
-	  		08/01/2014: Add a security model for user updates and some add friendly forwarding
+	  		08/01/2014: Add a security model for user updates and some add friendly forwarding.  Added an admin role and delete user functionality.
 	  	</li>
 	  	<li>
 	  		05/01/14: Finished sign out and added some Cucumer tests.  Had to precomile the asset stream
