complete microposts controller

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -39,6 +39,9 @@
 
 	  <ul>
 	  	<li>
+	  		12/02/14: Set up some Microposts and associated them with Users
+	  	</li>	
+	  	<li>
 	  		22/01/2014: Fixed some problems with the Index view and pagination
 	  	</li>
 	  	<li>
