--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -18,7 +18,7 @@
 	  <div id="about-content" style="display: none"></div>
 	</div>
 		<p></p>
-		  Hi. I'm ploughing my way through the Rails tutorial at the moment so you won't find anything too interesting here right now.  Wait a little bit though and you should find some of my old projects brought back to life!
+		  Hi. I'm slowly making my way through the Ruby on Rails tutorial by Michael Hartl at the moment so you won't find anything too interesting here right now.  Wait a little bit though and you should find some of my old projects brought back to life!
 	  <p>
 	    If all goes well here's what I hope to bring you in the new year.
 	  </p>
@@ -38,6 +38,9 @@
 	  </h2>
 
 	  <ul>
+	  	<li>
+	  		18/02/14: You can now create microposts and view them
+	  	</li>
 	  	<li>
 	  		12/02/14: Set up some Microposts and associated them with Users
 	  	</li>	
