--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -39,6 +39,9 @@
 
 	  <ul>
 	  	<li>
+	  		19/02/14: Show microposts on home page
+	  	</li>
+	  	<li>
 	  		18/02/14: You can now create microposts and view them
 	  	</li>
 	  	<li>
