--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -39,6 +39,9 @@
 
 	  <ul>
 	  	<li>
+	  		20/02/14: Now you can delete Microposta
+	  	</li>	  	
+	  	<li>
 	  		19/02/14: Show microposts on home page
 	  	</li>
 	  	<li>
