Add user following to feed

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -10,7 +10,7 @@
 	<div id="header">
 	  
 	  <h2>We&rsquo;re riding Ruby on Rails!</h2><p></p>
-	  Current Version = <b>0.7</b>
+	  Current Version = <b>0.8</b>
 	</div>
 	<p></p>
 	<div id="about">
@@ -34,10 +34,16 @@
 	  </h3>
 	  
 	  <h2>
-	    Progress so far .....
+	    Progress so far .....  nah .... all done : -))
 	  </h2>
 
 	  <ul>
+	  	<li>
+	  		13/03/14: That's it all done.  Finished.  Completamundo!  Log on and try it out. 
+	  	</li>		  	
+	  	<li>
+	  		27/02/14: Finished the model for following and unfollowing users 
+	  	</li>	  	
 	  	<li>
 	  		20/02/14: Now you can delete Microposta
 	  	</li>	  	
